ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/VariableLists/parserErrorRecovery_VariableList1/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/VariableLists/parserErrorRecovery_VariableList1/input.ts:2:1
  |
2 | return;
  | ^^^^^^

